--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<style>   </style>
 	</head>
 	<body>
-	<h1><i>Ez a főcím, ami egyesszintű címsor</i></h1>
+	<h1><i>Ez a főcím (most), ami egyesszintű címsor</i></h1>
 	<h2><u>Ez egy kettes szintű címsor</u></h2>
 	<p>Ez egy egyszerű bekezdés, amelyben valamilyen szöveg szerepel. Bármilyen szöveg lehet, akár még több soros is. Sőt, többnyire többsoros szokott lenni. A bekezdések blokkszintű elemek. H<sub>2</sub>O</p>
 	<h3><s>Hármas szintű címsor</s></h3>
